Fix fuckin' layout broken for smartphone

--- a/static/style/style.styl
+++ b/static/style/style.styl
@@ -45,7 +45,7 @@ body
     text-align center
 
     .title_links
-        width (8em * 3)
+        width (8em * 2 + 4em)
         margin 0 auto
         padding 0
 
@@ -70,8 +70,7 @@ body
             text-align left
 
         &.title_link--latest
-            // display block
-            // margin 0 auto
+            width 4em
             text-align center
 
         &.title_link--newer
@@ -333,7 +332,7 @@ body
 
 @media screen and (max-width: 460px)
     #wrap
-        padding-left 0
+        padding 16px 24px 0
 
     .illust
         width 40%
